everytign works with csrf but nees checks a nd frecarot

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,6 @@ server.ssl.key-alias=${SSL_KEY_ALIAS}
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+
+# Allow debig tools server side
+logging.level.org.springframework.security.web.csrf.CsrfFilter=DEBUG
